Allow to set exclusions to prevent some associations

--- a/public/style.css
+++ b/public/style.css
@@ -665,8 +665,7 @@ textarea {
 .message-field textarea {
     max-height: 150px;
 }
-.message-length,
-.note-length {
+.message-length {
     color: var(--color-gray-dark);
     font-size: 0.8em;
 }
@@ -770,44 +769,96 @@ textarea {
 }
 .user-list .user-item {
     min-height: 3em;
-    vertical-align: middle;
     border-bottom: 1px solid var(--color-gray);
     display: flex;
-    align-items: center;
+    align-items: stretch;
 }
 .user-list .user-item:last-child {
     border-bottom: 0 none;
 }
+.user-list .user-item.exclusions .user-column,
 .user-list .user-item.notes .user-column {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 3em;
-    justify-content: space-around;
+    flex: 1;
+    display: block;
     margin: 0;
+    padding: 1em;
 }
-@media screen and (min-width: 1000px) {
-    .user-list .user-item.notes .user-column {
-        padding: 0;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-}
-.user-list .user-item.notes .user-data {
+.user-list .user-item .user-data {
     display: flex;
     align-items: center;
 }
-.user-list .user-item.notes > input {
-    flex: 3;
+.user-list .user-item .user-data img {
+    margin-right: 1em;
+}
+.user-list .user-item .user-help {
+    display: flex;
+    align-items: center;
+    color: var(--color-gray-dark);
+    font-size: 0.8em;
+    margin-top: 0.5em;
+}
+.user-list .user-item.notes .note-column {
+}
+.user-list .user-item.notes textarea {
+    flex: 2;
     border: 0 none;
     border-left: 1px solid var(--color-gray);
-    line-height: 3em;
     box-sizing: border-box;
     width: 100%;
-    padding: 0 1em;
     margin: 0 0 0 1em;
     background-color: transparent;
+    border-radius: 0;
+    padding: 0.5em;
+}
+.user-list .user-item.exclusions .exclusion-column {
+    flex: 2;
+    border: 0 none;
+    border-left: 1px solid var(--color-gray);
+    box-sizing: border-box;
+    width: 100%;
+    padding: 1em;
+    margin: 0 0 0 1em;
+    background-color: transparent;
+}
+.user-list .user-item.exclusions .exclusion-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.user-list .user-item.exclusions .exclusion-container .exclusion-item {
+    background-color: var(--color-gray-light);
+    padding: 0 0.5em;
+    border-radius: var(--border-radius);
+    margin: 0 0.5em 0.5em 0;
+    display: inline-flex;
+    align-items: center;
+    height: 30px;
+    line-height: 30px;
+}
+.user-list .user-item.exclusions .exclusion-container .exclusion-item *:not(:first-child) {
+    margin-left: 0.5em;
+}
+.user-list .user-item.exclusions .exclusion-container .exclusion-item input {
+    width: 0;
+    height: 0;
+    position: absolute;
+    visibility: hidden;
+}
+.user-list .user-item.exclusions .exclusion-container .exclusion-item img {
+    width: 20px;
+    height: 20px;
+}
+.user-list .user-item.exclusions .exclusion-container .exclusion-item button {
+    border: 0 none;
+}
+.user-list .user-item.exclusions .exclusion-column .button {
+    display: inline-block;
+    margin: 0.5em 0 0 0;
+    text-decoration: none;
+    background-color: var(--color-primary);
+    border: 0 none;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
 }
 .user-list .no-result {
     min-height: 3em;
@@ -829,7 +880,10 @@ textarea {
     background-color: transparent;
     cursor: default;
 }
-.user-list .user-item * {
+.user-list.user-list-simple-rows .user-item {
+    align-items: center;
+}
+.user-list.user-list-simple-rows .user-item * {
     margin: 0 0 0 1em;
     display: flex;
 }
@@ -868,8 +922,8 @@ textarea {
     width: 20px;
     vertical-align: middle;
 }
-.checked-users-summary .user-summary span[data-uncheck-user] {
-    cursor: pointer;
+.checked-users-summary .user-summary button {
+    border: 0 none;
 }
 .validate-step .user-summary {
     display: flex;
@@ -1483,4 +1537,42 @@ details[open] {
 .breadcrumb li:last-of-type > *::after {
     /* hide the triangle after the last step */
     display: none;
+}
+
+/* Dialog */
+.dialog {
+    border: 0 none;
+    border-radius: var(--border-radius);
+    min-width: 350px;
+    padding: 0;
+}
+.dialog .dialog-close-button {
+    position: absolute;
+    right: 0.5em;
+    cursor: pointer;
+    font-size: 1em;
+    color: white;
+    border: 0 none;
+    background-color: transparent;
+}
+.dialog .dialog-header {
+    position: relative;
+    background-color: var(--color-primary-dark);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
+}
+.dialog .dialog-title {
+    font-size: 1em;
+    font-weight: bold;
+}
+.dialog .dialog-content {
+    background-color: white;
+    box-sizing: border-box;
+    text-align: center;
+}
+.dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.5);
 }
