--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -197,11 +197,9 @@
                                 </h3>
                             </summary>
                             <p>
-                                No, the association is purely random, so you cannot do that with our application.
-                                But at the validation step, you can shuffle the list again if you are not satisfied with
-                                the repartition.
-                                If you have to many "incompatibilities", an alternative could be to launch 2 Secret
-                                Santa with two groups of people.
+                                Yes, you can! On the second step of the application, you will be able to fill the
+                                exclusions form. There, you can specify pairs of users that should not be matched together.
+                                This is useful for couples, family members, or just people who don't want to gift to each other.
                             </p>
                         </details>
                     </li>
