--- a/templates/santa/participants.html.twig
+++ b/templates/santa/participants.html.twig
@@ -58,7 +58,7 @@
                                     </div>
                                     {% apply spaceless %}
                                         <div class="user-container">
-                                            <div class="user-list" id="user-list">
+                                            <div class="user-list user-list-simple-rows" id="user-list">
                                                 <div class="no-result is-hidden" id="no-user-matching">
                                                     No user matching.
                                                 </div>
