--- a/templates/santa/application/participants_slack.html.twig
+++ b/templates/santa/application/participants_slack.html.twig
@@ -8,7 +8,7 @@
     <span class="user-summary">
         <img src="{{ user.extra.image }}" alt="" loading="lazy" />
         <span>{{ user.extra.nickname }}</span>
-        <span data-uncheck-user="{{ userForm.vars.id }}" class="fas fa-times" title="Unselect this user"></span>
+        <button type="button" data-uncheck-user="{{ userForm.vars.id }}" class="fas fa-times" title="Unselect this user"></button>
     </span>
 {% endmacro %}
 
