Add exclusions stat

--- a/templates/content/stats.html.twig
+++ b/templates/content/stats.html.twig
@@ -94,6 +94,7 @@
             {{ stats.singleValue('Re-shuffle **', counters['shuffle'] ?? 0) }}
             {{ stats.singleValue('Spoils asked *', counters['spoil']) }}
             {{ stats.singleValue('Biggest team ***', counters['team-size-max']) }}
+            {{ stats.singleValue('With exclusions ***', counters['exclusions']) }}
         </div>
 
         <p class="is-center">
