--- a/public/style.css
+++ b/public/style.css
@@ -658,6 +658,7 @@ textarea {
     border: 1px solid var(--color-gray);
     border-radius: var(--border-radius);
 }
+.exclusions-step,
 .message-step {
     margin-bottom: 3em;
 }
@@ -1575,4 +1576,24 @@ details[open] {
 }
 .dialog::backdrop {
     background-color: rgba(0, 0, 0, 0.5);
+}
+.exclusions-not-available {
+    background-image: url('/images/exclusions-not-available.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    display: flex;
+    height: 400px;
+}
+.exclusions-not-available p {
+    backdrop-filter: blur(5px) brightness(50%);
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    align-content: center;
+    justify-content: center;
+    margin: 0;
+    font-weight: bold;
+    color: white;
+    font-size: 2em;
 }
