--- a/templates/santa/application/participants_discord.html.twig
+++ b/templates/santa/application/participants_discord.html.twig
@@ -2,31 +2,28 @@
 
 {% import _self as current %}
 
-{% macro userSummary(userForm, user) %}
+{% macro userSummary(user) %}
     <span class="user-summary">
         {% if user.extra.image %}
             <img src="{{ user.extra.image }}" alt="" loading="lazy" />
         {% endif %}
         <span>{{ user.name }}</span>
-        <button type="button" data-uncheck-user="{{ userForm.vars.id }}" class="fas fa-times" title="Unselect this user"></button>
+        <button type="button" data-uncheck-user="id_{{ user.identifier }}" class="fas fa-times" title="Unselect this user"></button>
     </span>
 {% endmacro %}
 
 {% block user_item %}
-    {% set user = userForm.parent.vars.choices[userForm.vars.name].data %}
-
     <label
             class="user-item"
-            for="{{ userForm.vars.id }}"
+            for="id_{{ user.identifier }}"
             data-search-index="{{ user.name ~ ' ' ~ user.extra.nickname }}"
     >
-
         <div class="data-summary"
-             data-summary="{{ current.userSummary(userForm, user)|escape('html_attr')|raw }}">
-            {{ form_widget(userForm, {'attr': {
-                'data-identifier': user.identifier
-            }}
-            ) }}
+             data-summary="{{ current.userSummary(user)|escape('html_attr')|raw }}"
+        >
+            <input type="checkbox" name="selectedUsers[]"
+                   {% if user.identifier in selectedUsers %}checked="checked"{% endif %}
+                   value="{{ user.identifier }}" id="id_{{ user.identifier }}">
         </div>
 
         {% if user.extra.image %}
