--- a/templates/santa/participants.html.twig
+++ b/templates/santa/participants.html.twig
@@ -7,19 +7,16 @@
     <div class="run-block">
         <h2>Select the participants of your Secret Santa</h2>
 
-        {% if not form.vars.valid %}
+        {% if errors is not empty %}
             <span class="error">
-            <i class="fas fa-exclamation-triangle"></i>
-            {%  for error in form.vars.errors %}<br>{{ error.message }} {% endfor %}
-        </span>
+                <i class="fas fa-exclamation-triangle"></i>
+                {% for error in errors %}<br>{{ error }}{% endfor %}
+            </span>
         {% endif %}
 
         {% if users|length >= 2 %}
-            {{ form_start(form, {
-                'method': 'POST',
-                'attr': {'id': 'run_form'}
-                }) }}
-                <div class="pure-g">
+            <form action="" id="run_form" method="POST">
+            <div class="pure-g">
                     <div class="pure-u-1 pure-u-lg-1-2">
                         <div class="run-column run-column-left">
                             <div class="sticky-container">
@@ -62,7 +59,7 @@
                                                 <div class="no-result is-hidden" id="no-user-matching">
                                                     No user matching.
                                                 </div>
-                                                {% for userForm in form.selectedUsers %}
+                                                {% for user in users %}
                                                     {% block user_item %}{% endblock %}
                                                 {% endfor %}
                                             </div>
@@ -107,7 +104,7 @@
                         </div>
                     </div>
                 </div>
-            {{ form_end(form) }}
+            </form>
 
             <script type="text/javascript" nonce="{{ csp_nonce('script') }}">
                 /**
@@ -310,7 +307,7 @@
                     const userIds = e.target.getAttribute('data-user-ids').split('|');
 
                     for(let i=0; i<userIds.length; i++) {
-                        const userInput = document.querySelector('[data-identifier="' + userIds[i] + '"');
+                        const userInput = document.querySelector('[value="' + userIds[i] + '"');
 
                         if (userInput) {
                             userInput.checked = true;
