fix(faq): Make it clear the exclusion feature is off

--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -197,8 +197,11 @@
                                 </h3>
                             </summary>
                             <p>
+                                🚧 👷 This feature is a <a href="https://github.com/jolicode/secret-santa/issues/144">work in progress</a> - any funding or help is welcome!
+                            </p>
+                            <p style="text-decoration: line-through;">
                                 Yes, you can! On the second step of the application, you will be able to fill the
-                                exclusions form. There, you can specify pairs of users that should not be matched together.
+                                exclusion form. There, you can specify pairs of users that should not be matched together.
                                 This is useful for couples, family members, or just people who don't want to gift to each other.
                             </p>
                         </details>
