chore(faq): Add FAQ entry for missing Webex users
Added FAQ entry about missing people in Webex.

--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -318,6 +318,18 @@
                                 anymore - it can only do that if you <a href="{{ path('webex_landing') }}">restart the app</a>.</p>
                         </details>
                     </li>
+                    <li>
+                        <details id="webex-missing-people">
+                            <summary>
+                                <h3>
+                                    <p><a href="#webex-missing-people" class="faq-anchor"><i class="fas fa-link"></i></a>Some peoples are not showing up, why?</p>
+                                </h3>
+                            </summary>
+                            <p>We can only list users from active rooms (that's a limitation of non-admin Webex API's). So it will only list users 
+                                from active rooms (the last 20 rooms are used). Some rooms also have restrictions and the bot cannot list users from them.
+                                So make sure the people you want to include in your draw are all in a room recently active.</p>
+                        </details>
+                    </li>
                 </ul>
 
                 <h2>Miscellaneous</h2>
