--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -322,7 +322,7 @@
                         <details id="webex-missing-people">
                             <summary>
                                 <h3>
-                                    <p><a href="#webex-missing-people" class="faq-anchor"><i class="fas fa-link"></i></a>Some peoples are not showing up, why?</p>
+                                    <p><a href="#webex-missing-people" class="faq-anchor"><i class="fas fa-link"></i></a>Some people are not showing up, why?</p>
                                 </h3>
                             </summary>
                             <p>We can only list users from active rooms (that's a limitation of non-admin Webex API's). So it will only list users 
